# ExtractShellDemo

ClassLoaderTest/: settings.gradle
ClassLoaderTest/app/: build.gradle
ClassLoaderTest/app/src/androidTest/java/com/example/classloadertest/: ExampleInstrumentedTest.java
ClassLoaderTest/app/src/main/: AndroidManifest.xml
ClassLoaderTest/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ClassLoaderTest/app/src/main/java/com/example/classloadertest/: MainActivity.java
ClassLoaderTest/app/src/test/java/com/example/classloadertest/: ExampleUnitTest.java
ClassLoaderTest/gradle/wrapper/: gradle-wrapper.properties
ExtractShell/: settings.gradle
ExtractShell/app/: build.gradle
ExtractShell/app/src/androidTest/java/com/example/extractshell/: ExampleInstrumentedTest.java
ExtractShell/app/src/main/: AndroidManifest.xml
ExtractShell/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ExtractShell/app/src/main/cpp/dlfcn/: dlfcn_compat.h  dlfcn_nougat.h
ExtractShell/app/src/main/java/com/example/extractshell/: MainActivity.java
ExtractShell/app/src/main/res/values/: strings.xml  themes.xml
ExtractShell/app/src/main/res/values-night/: themes.xml
ExtractShell/app/src/test/java/com/example/extractshell/: ExampleUnitTest.java
ExtractShell/gradle/wrapper/: gradle-wrapper.properties
PluginDex/: settings.gradle
PluginDex/app/: build.gradle
PluginDex/app/src/androidTest/java/com/example/plugindex/: ExampleInstrumentedTest.java
PluginDex/app/src/main/: AndroidManifest.xml
PluginDex/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
PluginDex/app/src/main/java/com/example/plugindex/: MainActivity.java  TestClass.java
PluginDex/app/src/main/res/values/: themes.xml
PluginDex/app/src/main/res/values-night/: themes.xml
PluginDex/app/src/test/java/com/example/plugindex/: ExampleUnitTest.java
PluginDex/gradle/wrapper/: gradle-wrapper.properties
